recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:6: error: not found: value sierpinski
    sierpinski(levels-1,length/2)
    ^PolygonFractal:9: error: not found: value sierpinski
    sierpinski(levels-1,length/2)
    ^