recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  if (levels>0) {
    polygonFractal(levels-1,sides,length*shrink,shrink)
    avance(length)
    droite(120)
    sierpinski(levels-1,length/2)
    avance(length)
    droite(120)
    sierpinski(levels-1,length/2)
    avance(length)
    droite(120)
  }
  else {
    gauche(180-360/sides)
    for (i<-3 to sides){
      avance(length)
      droite(360/sides)
    }
    gauche(180-360/sides)
  }
}